--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,5 +21,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.3.0'
-    compile project(':bindrecyclerview')
+//    compile project(':bindrecyclerview')
+    compile "cn.chengxingyao:bindrecyclerview:0.1"
 }
