--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url "https://raw.githubusercontent.com/chengxingyao/maven/master/" }
     }
 }
 
